# rand-floor-monitor

./: .gitignore  Cargo.toml  index.html  justfile  start.sh
src/: main.rs  message.rs
