[package]
name = "rand-floor-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { version = "2.0.10", features = ["ws"] }
reqwest = "0.11.22"
serde_json = "1.0.107"
teloxide = "0.12.2"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
